--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^0.15.0",
+    "gulp-live-server": "0.0.31",
     "gulp-open": "^1.0.0",
+    "html": "^1.0.0",
     "jquery": "^2.1.4",
     "lodash": "^4.17.4",
     "react": "^0.13.3",
