--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "html": "^1.0.0",
     "jquery": "^2.1.4",
     "lodash": "^4.17.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
