--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "samall web app",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.17.0",
     "bootstrap": "^3.3.5",
     "browserify": "^11.0.1",
-    "flux": "^2.0.3",
+    "flux": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
