--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.17.0",
     "bootstrap": "^3.3.5",
     "browserify": "^11.0.1",
+    "events": "^1.1.1",
     "flux": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
@@ -17,6 +18,7 @@
     "html": "^1.0.0",
     "jquery": "^2.1.4",
     "lodash": "^4.17.4",
+    "object-assign": "^4.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^0.13.3",
